fix bug swagger
