# src/controllers/auth.controller.ts
@@ -63,6 +63,12 @@ export default {
     }
   },
   async login(req: Request, res: Response) {
+    /**
+     #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#components/schemas/LoginRequest"}
+     }
+     */
     const { identifier, password } = req.body as unknown as TLogin;
     try {
       const userByIdentifier = await UserModel.findOne({
@@ -112,6 +118,11 @@ export default {
     }
   },
   async me(req: IReqUser, res: Response) {
+    /**
+      #swagger.security = [{
+        "bearerAuth" = []
+      }]
+     */
     try {
       const user = req.user;
 
