# src/docs/swagger_output.json
@@ -70,18 +70,16 @@
           }
         },
         "requestBody": {
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "identifier": {
-                    "example": "any"
-                  },
-                  "password": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#components/schemas/LoginRequest"
+              }
+            },
+            "application/xml": {
+              "schema": {
+                "$ref": "#components/schemas/LoginRequest"
               }
             }
           }
@@ -101,7 +99,8 @@
           "403": {
             "description": "Forbidden"
           }
-        }
+        },
+        "security": []
       }
     }
   },
@@ -124,6 +123,9 @@
             "type": "string",
             "example": "12345"
           }
+        },
+        "xml": {
+          "name": "LoginRequest"
         }
       }
     }
